deployment/scrumlr-dashboard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scrumlr-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scrumlr-dashboard
  template:
    metadata:
      labels: 
        app: scrumlr-dashboard
    spec:
      containers:
        - name: scrumlr-dashboard
          image: scrumlr-dashboard
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4040
          livenessProbe: 
            httpGet:
              path: /dashboard
              port: 4040
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
      restartPolicy: Always
