deployment/scrumlr-dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scrumlr-dashboard
spec:
  ports:
    - port: 4040
      targetPort: 4040
      protocol: TCP
  selector:
    app: scrumlr-dashboard
