deployment/scrumlr-dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scrumlr-dashboard-ingress
spec:
  rules:
  - host: kubernetes.docker.internal
    http:
      paths:
      - path: /dashboard
        pathType: Prefix
        backend:
          service:
            name: scrumlr-dashboard
            port:
              number: 4040
